[tool.poetry]
name = "minesweeper-cheat"
version = "0.1.0"
description = ""
authors = ["Jakub Prítrský <jakub.prit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.9"
numpy = ">=1.25.1"
pyautogui = ">=0.9.54"
opencv-python = ">=4.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
